# huffman

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: Huffman.cpp  Huffman.hpp
src/test/: huffman-coding.cpp
src/ui/: MainFrame.cpp  MainFrame.hpp  TreePanel.cpp  TreePanel.hpp
